WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168157
Zero out some WKWebView state in the case of a web content crash
https://bugs.webkit.org/show_bug.cgi?id=168157
Summary
Zero out some WKWebView state in the case of a web content crash
Simon Fraser (smfr)
Reported
2017-02-10 18:48:25 PST
Zero out some WKWebView state in the case of a web content crash
Attachments
Patch
(1.66 KB, patch)
2017-02-10 18:49 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-02-10 18:49:17 PST
Created
attachment 301234
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-10 20:00:41 PST
Comment on
attachment 301234
[details]
Patch Clearing flags on attachment: 301234 Committed
r212176
: <
http://trac.webkit.org/changeset/212176
>
WebKit Commit Bot
Comment 3
2017-02-10 20:00:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug