Zero out some WKWebView state in the case of a web content crash https://bugs.webkit.org/show_bug.cgi?id=168157

Reviewed by Tim Horton.

Reset some bits of state in WKWebView when the web content process crashes, in
to try to avoid states that might cause the web view to stay blank.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _processDidExit]):


Canonical link: https://commits.webkit.org/185216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212176 268f45cc-cd09-0410-ab3c-d52691b4dbfc